--- a/templates/reportgeneration.html
+++ b/templates/reportgeneration.html
@@ -83,7 +83,7 @@
                             <td style="width: 15%">{{transaction.timestamp[:10]}}</td>
                             <td style="width: 20%">{{(transaction.sender[:8])}}</td>
                             <td style="width: 35%"></td>
-                            <td style="width: 15%">{{transaction.amount}}</td>
+                            <td style="width: 15%">{{"{:,.2f}".format(transaction.amount)}}</td>
                         </tr>
                         {% set ns.t_index = ns.t_index + 1 %}
 
