--- a/BuzzBraceletVendor/app/src/main/res/layout/toolbar.xml
+++ b/BuzzBraceletVendor/app/src/main/res/layout/toolbar.xml
@@ -3,7 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#a542b9"
+    android:background="@color/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:title="Vendor:Name"></androidx.appcompat.widget.Toolbar>
+    app:title="Vendor:Name">
+
+    <TextView
+        android:id="@+id/tvToolBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fontFamily="@font/amiko"
+        android:textSize="25sp" />
+</androidx.appcompat.widget.Toolbar>
