--- a/templates/registration.html
+++ b/templates/registration.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account Management</title>
     <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
-    <script src="../static/js/register.js"></script>
 </head>
 
 <body>
@@ -19,6 +18,12 @@
             <a class="active" href="/">
                 <div class="link">ACCOUNTS</div>
             </a>
+            <a class="sub" href="/users">
+                <div class="link">users</div>
+            </a>
+            <a class="sub" href="/vendors">
+                <div class="link">vendors</div>
+            </a>
             <a href="/report">
                 <div class="link">REPORTS</div>
             </a>
@@ -26,7 +31,7 @@
         <div id="main">
             <div class="header">
                 <div class="left-align">
-                    ACCOUNT MANAGEMENT
+                    <h2>ACCOUNT MANAGEMENT</h2>
                 </div>
                 <div class="right-align">
                     {% if blockchain == 0 %}
@@ -37,119 +42,29 @@
                 </div>
             </div>
             <div class="content-flex">
-                <div id="client-container" class="box-50">
-                    <div style="text-align: center">
-                        <span style="font-size: 16px">USERS</span>
-                        <hr />
-                    </div>
-                    <form id="client-form">
-                        <div class="client-header">REGISTER NEW CLIENT</div>
-                        <div class="label-input">
-                            Name
-                            <input placeholder="Client name" id="client-name" type="text" class="text-input" name="client-name" onkeyup="checkClient(event)"/>
+                <div class="box-30 button user">
+                    <a href="/users">
+                        <div class="card">
+                            <span style="font-size: 16px">CLIENTS</span>
+                            <br />
+                            <span style="font-size: 32px">{{client_number}}</span>
                         </div>
-                        <div class="label-input">
-                            Contact
-                            <input placeholder="Contact number" id="client-contact" type="text" class="text-input" name="client-contact" onkeyup="checkClient(event)"/>
-                        </div>
-                        <div class="label-input">
-                            Amount
-                            <input placeholder="Amount" id="client-amount" type="text" class="text-input" name="client-amount" onkeyup="checkClient(event)"/>
-                        </div>
-                        <div class="button-container">
-                            <button id="client-add" type="button" onclick="registerClient()" disabled>add</button>
-                        </div>
-                    </form>
-                    <hr />
-                    <div class="container">
-                        <table>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">Contact</th>
-                                <th scope="col">Balance</th>
-                                <th scope="col" colspan="2"></th>
-                            </tr>
-
-                            {% for user in users %}
-
-                            <tr>
-                                <td style="width: 40%">{{user[1]}} <span style="color:#aaa">({{user[0][:8]}})</span></td>
-                                <td style="width: 20%">{{user[2]}}</td>
-                                <td style="width: 20%">{{user[4]}} ({{user[5]}})</td>
-                                <td style="width: 10%">
-                                    <button title="Add funds to this user's address" class="add" onclick="addFunds('{{user[0]}}')">+</button>
-                                </td>
-                                <td style="width: 10%">
-                                    <button title="Blacklist this user's address" class="blacklist" onclick="blacklist('{{user[1]}}', '{{user[0]}}', '{{user[5]}}')">x</button>
-                                </td>
-                            </tr>
-
-                            {% endfor %}
-                        </table>
-                    </div>
+                    </a>
                 </div>
-
-                <div id="vendor-container" class="box-50">
-                    <div style="text-align: center">
-                        <span style="font-size: 16px">VENDORS</span>
-                        <hr />
-                    </div>
-                    <form id="vendor-form">
-                        {% if blockchain == 0 %}
-                        <fieldset>
-                        {% else %}
-                        <fieldset disabled>
-                        {% endif %}
-                            <div class="vendor-header">REGISTER NEW VENDOR </div>
-                            <div class="label-input">
-                                Name
-                                <input placeholder="Business name" id="vendor-name" type="text" class="text-input" name="vendor-name" onkeyup="checkVendor(event)"/>
-                            </div>
-                            <div class="label-input">
-                                Contact
-                                <input placeholder="Contact number (for stall operator)" id="vendor-contact" type="text" class="text-input" name="vendor-contact" onkeyup="checkVendor(event)"/>
-                            </div>
-                            <div class="label-input">
-                                    Type
-                                    <input placeholder="Business Type" id="vendor-type" type="text" class="text-input" name="vendor-type" onkeyup="checkVendor(event)"/>
-                                </div>
-                            {% if blockchain == 0 %}
-                            <div class="button-container">
-                                <button id="vendor-add" type="button" onclick="registerVendor()" disabled>add</button>
-                            </div>
-                            {% else %}
-                            <div class="button-container">
-                                <button id="vendor-add" type="button" disabled>add</button>
-                            </div>
-                            {% endif %}
-                        </fieldset>
-                    </form>
-                    <hr />
-                    <div class="container">
-                        <table>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">Contact</th>
-                                <th scope="col">Type</th>
-                                <th scope="col">Balance</th>
-                            </tr>
-
-                            {% for vendor in vendors %}
-
-                            <tr>
-                                <td style="width: 40%">{{vendor[1]}} <span style="color:#aaa">({{vendor[0][:8]}})</span></td>
-                                <td style="width: 20%">{{vendor[2]}}</td>
-                                <td style="width: 20%">{{vendor[3]}}</td>
-                                <td style="width: 20%">{{vendor[4]}} ({{vendor[5]}})</td>
-                            </tr>
-
-                            {% endfor %}
-                        </table>
-                    </div>
+                <div class="box-30 button vendor">
+                    <a href="/vendors">
+                        <div class="card">
+                            <span style="font-size: 16px">VENDORS</span>
+                            <br />
+                            <span style="font-size: 32px">{{vendor_number}}</span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="../static/js/register.js"></script>
 </body>
 
 </html>
