display pending balance only

--- a/templates/registration_user.html
+++ b/templates/registration_user.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Account Management</title>
+    <title>Client Management</title>
     <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -76,7 +76,7 @@
                         <tr>
                             <td style="width: 40%">{{user[1]}} <span style="color:#aaa">({{user[0][:8]}})</span></td>
                             <td style="width: 20%">{{user[2]}}</td>
-                            <td style="width: 20%">{{user[4]}} ({{user[5]}})</td>
+                            <td style="width: 20%">{{user[5]}}</td>
                             <td style="width: 10%">
                                 <button title="Add funds to this user's address" class="add"
                                     onclick="addFunds('{{user[0]}}')">+</button>
