--- a/templates/registration_vendor.html
+++ b/templates/registration_vendor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Account Management</title>
+    <title>Vendor Management</title>
     <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
     <script src="../static/js/register.js"></script>
 </head>
@@ -87,7 +87,7 @@
                             <td style="width: 40%">{{vendor[1]}} <span style="color:#aaa">({{vendor[0][:8]}})</span></td>
                             <td style="width: 20%">{{vendor[2]}}</td>
                             <td style="width: 20%">{{vendor[3]}}</td>
-                            <td style="width: 20%">{{vendor[4]}} ({{vendor[5]}})</td>
+                            <td style="width: 20%">{{vendor[5]}}</td>
                         </tr>
 
                         {% endfor %}
