add prompt for scanning

--- a/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
+++ b/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
@@ -68,5 +68,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/tvStatus"
+        android:layout_width="374dp"
+        android:layout_height="163dp"
+        android:fontFamily="sans-serif-black"
+        android:text="Scan Tag.."
+        android:textAlignment="center"
+        android:textSize="60sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.594"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:layout_constraintVertical_bias="0.343" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
