change len() to list|length

--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -46,7 +46,7 @@
             <div class="content-flex">
                 <div class="box-30 card">
                     <h4>BLOCK SIZE</h4>
-                    <span style="font-size:32px">{{len(blocks)}}</span>
+                    <span style="font-size:32px">{{blocks|length}}</span>
                 </div>
                 <div class="box-30 card">
                     <h4>TRANSACTIONS</h4>
