fix urls and routing

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -15,7 +15,7 @@
             <a href="/transactions">
                 <div class="link">TRANSACTIONS</div>
             </a>
-            <a class="active" href="/">
+            <a class="active" href="/account">
                 <div class="link">ACCOUNTS</div>
             </a>
             <a class="sub" href="/users">
