--- a/templates/registration_vendor.html
+++ b/templates/registration_vendor.html
@@ -16,7 +16,7 @@
             <a href="/transactions">
                 <div class="link">TRANSACTIONS</div>
             </a>
-            <a href="/">
+            <a href="/accounts">
                 <div class="link">ACCOUNTS</div>
             </a>
             <a class="sub" href="/users">
