--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -17,7 +17,7 @@
             <a class="active" href="/transactions">
                 <div class="link">TRANSACTIONS</div>
             </a>
-            <a href="/">
+            <a href="/accounts">
                 <div class="link">ACCOUNTS</div>
             </a>
             <a class="sub" href="/users">
