--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@
     font-family: sans-serif;
     font-size: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #414559;
     /* outline: 1px solid red; */
 }
 
@@ -42,6 +43,7 @@ a {
 #sidebar a .link {
     text-align: left;
     padding-left: 1.5vw;
+    color: #f7f7f8;
 }
 
 #sidebar a.active .link {
@@ -156,7 +158,7 @@ button.blacklist:hover, button.cancel-edit:hover {
 .box-50, .box-auto, .box-30 {
     background: #fff;
     border-radius: 4px;
-    margin: 8px 8px 32px 8px;
+    margin: 8px 8px 16px 8px;
     height: 0%;
 }
 
@@ -176,6 +178,10 @@ button.blacklist:hover, button.cancel-edit:hover {
 .button {
     color: #f7f7f8;
     transition: 0.1s ease-in-out background-color;
+}
+
+.button .card span {
+    color: #f7f7f8;
 }
 
 .button.user {
