--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -20,10 +20,10 @@
             <a href="/accounts">
                 <div class="link">ACCOUNTS</div>
             </a>
-            <a class="sub" href="/users">
+            <a class="sub" href="/accounts/users">
                 <div class="link">users</div>
             </a>
-            <a class="sub" href="/vendors">
+            <a class="sub" href="/accounts/vendors">
                 <div class="link">vendors</div>
             </a>
             <a href="/report">
@@ -36,7 +36,7 @@
                     <h2>OVERVIEW</h2>
                 </div>
                 <div class="right-align">
-                    STATUS
+                    NODE STATUS
                     <label class="switch">
                         <input id="node-status" type="checkbox" onclick="toggleNode(this)">
                         <span class="slider round"></span>
@@ -50,11 +50,11 @@
                 </div>
                 <div class="box-30 card">
                     <h4>TRANSACTIONS</h4>
-                    <span style="font-size:32px">{{transaction_count}}</span>
+                    <span style="font-size:32px">{{tcount}}</span>
                 </div>
                 <div class="box-30 card">
                     <h4>CIRCULATION</h4>
-                    <span style="font-size:32px">{{amount_count}}</span>
+                    <span style="font-size:32px">{{"{:,.2f}".format(acount)}}</span>
                 </div>
             </div>
             <div class="content">
