--- a/templates/reportgeneration.html
+++ b/templates/reportgeneration.html
@@ -61,7 +61,7 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="box-auto">
+                <div class="box-auto" id="report">
                     {% if t_length != 0 %}
                     <div style="font-size: 18px">{{vendor_requested.name}}</div>
                     Transaction Detail Report<br />
